# OpenLine

./: .env.example  .gitignore  README.md  app.py  apps_script.gs  llm.py  main.py  pipeline.py  prompt.py  pyproject.toml  requirements.txt  sheet.py  stt.py  tts.py  twilio_client.py
voice_agent/: app.py  config.py  llm.py  pipeline.py  sheet.py  stt.py  tts.py  twilio_client.py
